2009-12-03  Murray Cumming  <murrayc@murrayc.com>

	Related Records layout: Field formatting: Choices: Fix related choices.

	* glom/mode_design/layout/dialog_layout_details.[h|cc]
	* glom/mode_design/layout/dialog_layout_list_related.[h|cc]:
	Add virtual get_fields_table() and use this in 
	on_button_field_formatting() so that the formatting dialog shows 
	relationships for the to table instead of the parent table, when 
	editing formatting for a field in a related records portal.
	Bug noticed by Michael Hasselmann and Andrew Ruthven.
	* glom/mode_design/layout/layout_item_dialogs/dialog_field_layout.c:
	Removed some debug output.

2009-12-03  Murray Cumming  <murrayc@murrayc.com>

	Allow use of example documents that mention an unsupported backend.

	* glom/application.cc: check_document_hosting_mode_is_supported():
	Don't check the backend if it is an example document because the user 
	will choose it when saving anyway.

2009-11-17  Murray Cumming  <murrayc@murrayc.com>

	tests: dtd: Now passes.

	* glom/libglom/document/bakery/document_xml.cc: get_node_document():
	Added commented-out code to write the DOCTYPE declaration, if we ever 
	want to specify the PUBLIC DTD idenitifier and URI in each document.
	Let's avoid that for now because we'd have to make sure that it's 	
	hosted properly. 
	* tests/dtd/test_example_sqlite: Do not use --valid because that 
	seems to always require a DTD in the document's DOCTYPE declaration.
	--dtdvalid seems to do the same thing already, but with the specified 
	DTD.

2009-11-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_document.dtd: Mention the xmlns attribute because DTD 
	validation doesn't know about XML namespaces.

2009-11-17  Murray Cumming  <murrayc@murrayc.com>

	Document: Ensure that the xmlns ID is always in saved documents.

	* glom/libglom/document/bakery/document_xml.cc: get_node_document():
	Make sure that the xmlns ID is added, even when the root node already 